get latest result implemented
